# ChangeLog for media-gfx/xfig
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/xfig/ChangeLog,v 1.28 2006/12/02 00:30:11 masterdriverz Exp $

  02 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  xfig-3.2.4-r1.ebuild, xfig-3.2.4-r2.ebuild, xfig-3.2.5_alpha5.ebuild:
  Convert make to emake, add x11-libs/libXi dependency, thanks to Patrick
  Lauer for reporting, bug 153069

  02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> xfig-3.2.4-r2.ebuild:
  Stable on sparc

  01 Aug 2006; Patrick McLean <chutzpah@gentoo.org> xfig-3.2.4-r2.ebuild:
  Fixup libdir refernces (bug # 90799) and mark stable on amd64 (bug #140904).

  20 Jul 2006; Joshua Jackson <tsunam@gentoo.org> xfig-3.2.4-r2.ebuild:
  Stable x86; bug #140904

  08 Jul 2006; Lars Weiler <pylon@gentoo.org> xfig-3.2.4-r2.ebuild:
  Stable on ppc; gcc-4 related; bug #138099.

  11 Feb 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  xfig-3.2.4-r1.ebuild, xfig-3.2.4-r2.ebuild, xfig-3.2.5_alpha5.ebuild:
  Added modular X dependencies (bug #120934, Herve Roussain).

  08 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org>
  +files/xfig-3.2.4-gcc4.patch, xfig-3.2.4-r2.ebuild:
  Added GCC 4 patch, thanks to Thomas Weidner <3.14159@gmx.net>, bug 114349.

*xfig-3.2.5_alpha5 (24 Sep 2005)

  24 Sep 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/xfig-3.2.5_alpha5-gentoo.diff, +files/xfig-3.2.5_alpha5-xaw3d.diff,
  +metadata.xml, -xfig-3.2.3d-r1.ebuild, -xfig-3.2.4.ebuild,
  +xfig-3.2.5_alpha5.ebuild:
  Version bump for bug 71205, thanks to Cristian Peraferrer <corellian at
  interec dot org>. Ported gentoo and xaw3d patches, shape patch is integrated
  upstream.

  13 Sep 2005; Aron Griffis <agriffis@gentoo.org> xfig-3.2.4-r2.ebuild:
  Mark 3.2.4-r2 stable on alpha

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  16 Dec 2004; Markus Rothe <corsair@gentoo.org> xfig-3.2.4-r2.ebuild: