@@ -22,18 +22,18 @@ EBUILD xfig-3.2.4-r1.ebuild 1224 RMD160 5f1f84669be51b61b57943b6a99007fe907b2b91
 MD5 cbc5adebbcbea79c43048fda92c271c2 xfig-3.2.4-r1.ebuild 1224
 RMD160 5f1f84669be51b61b57943b6a99007fe907b2b91 xfig-3.2.4-r1.ebuild 1224
 SHA256 f245b8075c1fb81a11f8e8fa53112190cd603de01f08cfd4e30275976833fc40 xfig-3.2.4-r1.ebuild 1224
-EBUILD xfig-3.2.4-r2.ebuild 1621 RMD160 c8f5307b0145df1863e24669696e01d568be5069 SHA1 ec45bf397848f01d48a8cbea51310bcc0aa62fce SHA256 bf75f522aed67b8235178250bcc176f45a439b3331a68893f12c333211ad923b
-MD5 8ad9d1d67009ebef2effe9fae4098f04 xfig-3.2.4-r2.ebuild 1621
-RMD160 c8f5307b0145df1863e24669696e01d568be5069 xfig-3.2.4-r2.ebuild 1621
-SHA256 bf75f522aed67b8235178250bcc176f45a439b3331a68893f12c333211ad923b xfig-3.2.4-r2.ebuild 1621
-EBUILD xfig-3.2.5_alpha5.ebuild 1376 RMD160 e25d6ca44eef206bb79dcfa37a3bc2c2323746f5 SHA1 5ca082fab9d3acefe5d8454ff4c5a710a47aec23 SHA256 9ead71e8e4d5353487b95dfe09ef43ef0e2930e0479800b14b33d86000950f9b
-MD5 002afd3dfa521dce73a19fb09055c45e xfig-3.2.5_alpha5.ebuild 1376
-RMD160 e25d6ca44eef206bb79dcfa37a3bc2c2323746f5 xfig-3.2.5_alpha5.ebuild 1376
-SHA256 9ead71e8e4d5353487b95dfe09ef43ef0e2930e0479800b14b33d86000950f9b xfig-3.2.5_alpha5.ebuild 1376
-MISC ChangeLog 4219 RMD160 1f658732ab11f1fda7ce3341ee1f3d1c46565c02 SHA1 2042d4163aff833e3ca670c30074236e3f5bf39a SHA256 a595b3ee832c2a4020d18012a22c5409bdc130c000bd97c92fba300fb3a46c8c
-MD5 bcaba5ce111615bf42789aec71716123 ChangeLog 4219
-RMD160 1f658732ab11f1fda7ce3341ee1f3d1c46565c02 ChangeLog 4219
-SHA256 a595b3ee832c2a4020d18012a22c5409bdc130c000bd97c92fba300fb3a46c8c ChangeLog 4219
+EBUILD xfig-3.2.4-r2.ebuild 1619 RMD160 43fc3e5cbefed75362c1c1e574e1b605f421992f SHA1 ca6bd133363518c64b9d529700f22fd48c8a9a4b SHA256 e6f13a8faee222079ff93ad5d3fd9c8203287613ead2dc391a51514771f6981d
+MD5 71b249477f801494156bc10c1408ff15 xfig-3.2.4-r2.ebuild 1619
+RMD160 43fc3e5cbefed75362c1c1e574e1b605f421992f xfig-3.2.4-r2.ebuild 1619
+SHA256 e6f13a8faee222079ff93ad5d3fd9c8203287613ead2dc391a51514771f6981d xfig-3.2.4-r2.ebuild 1619
+EBUILD xfig-3.2.5_alpha5.ebuild 1374 RMD160 1787473509ad4e09d78c2d45fad756de33156796 SHA1 2b48dee022c2bde6923db1952baf0b350d60d70f SHA256 b4fe0af557050a2aa8f7e0cde770521902457660edf416d468e6a71c512a5773
+MD5 74d957b28fde2f9133352c4c70ae60c0 xfig-3.2.5_alpha5.ebuild 1374
+RMD160 1787473509ad4e09d78c2d45fad756de33156796 xfig-3.2.5_alpha5.ebuild 1374
+SHA256 b4fe0af557050a2aa8f7e0cde770521902457660edf416d468e6a71c512a5773 xfig-3.2.5_alpha5.ebuild 1374
+MISC ChangeLog 4374 RMD160 4c5488719591cfea8d10b9e49fa7cd7895817091 SHA1 9c811f89df13b514bc3c7de3864ef707e44c10e7 SHA256 364108c8bb6ac930edb7815d2a7bd5d7983db5c1fe91671422b1006d555f87f1
+MD5 4f289f02b08629b36d1dcf1e7decef96 ChangeLog 4374
+RMD160 4c5488719591cfea8d10b9e49fa7cd7895817091 ChangeLog 4374
+SHA256 364108c8bb6ac930edb7815d2a7bd5d7983db5c1fe91671422b1006d555f87f1 ChangeLog 4374
 MISC metadata.xml 314 RMD160 25181cde297628576a9545bea3a76601485bfaf3 SHA1 ac16b621acf5a22b64859e3323d466fb556fc4c8 SHA256 736baab77aea9c4da199c01e3cd6877c271bd02357ff9b41b537a2232c6e96d7
 MD5 38cacf4270b8a100918bf328ed9154d3 metadata.xml 314
 RMD160 25181cde297628576a9545bea3a76601485bfaf3 metadata.xml 314
