@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/xfig
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xfig/ChangeLog,v 1.28 2006/12/02 00:30:11 masterdriverz Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xfig/ChangeLog,v 1.29 2007/01/17 18:50:59 antarus Exp $
+
+  17 Jan 2007; Alec Warner <antarus@gentoo.org> xfig-3.2.4-r2.ebuild,
+  xfig-3.2.5_alpha5.ebuild:
+  Fix for what appears to be a parallel install bug, # 161668
 
   02 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
   xfig-3.2.4-r1.ebuild, xfig-3.2.4-r2.ebuild, xfig-3.2.5_alpha5.ebuild:
